[package]
name = "ris_terrain_generator"
version = "2.0.1"
authors = ["Rismosch"]
edition = "2021"
rust-version = "1.77"
description = "Generates heightmaps for a planet, using cubic topology"
#documentation = "URL of the package documentation."
readme = "README.md"
homepage = "https://rismosch.com/"
repository = "https://github.com/Rismosch/ris_terrain_generator"
license = "MIT"
keywords = []
categories = []
#build = "Path to the package build script."
publish = false

[dependencies]

[profile.dev]
opt-level = 0
debug = true
#split-debuginfo = '...'  # Platform-specific.
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
#split-debuginfo = '...'  # Platform-specific.
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
